[package]
authors = ["leudz <dylan.ancel@gmail.com>"]
categories = ["data-structures", "game-development", "concurrency", "no-std"]
description = "Entity Component System"
edition = "2021"
keywords = ["ecs", "entity", "component"]
license = "MIT OR Apache-2.0"
name = "shipyard"
readme = "README.md"
repository = "https://github.com/leudz/shipyard"
version = "0.7.4"

[workspace]
members = ["bunny_demo", "shipyard_proc", "square_eater", "visualizer"]

[dependencies]
hashbrown = { version = "0.15.1", default-features = false, features = [
    "inline-more",
    "allocator-api2",
] }
lock_api = "0.4.12"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.214", optional = true, default-features = false, features = [
    "derive",
] }
shipyard_proc = { version = "0.4", optional = true }
siphasher = "1.0.1"
tracing = { version = "0.1.40", default-features = false, optional = true }

[features]
default = ["parallel", "proc", "std"]
parallel = ["rayon", "shipyard_proc/parallel"]
proc = ["shipyard_proc"]
serde1 = ["serde", "hashbrown/serde"]
std = ["hashbrown/default-hasher"]
thread_local = []

[dev-dependencies]
bincode = "1.3.3"
parking_lot = "0.12.3"
serde_json = "1.0.132"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
